--- a/contact.html
+++ b/contact.html
@@ -61,13 +61,16 @@
                     <th>
                       <iframe id="thesismaimage" src="pdf/Screenshot (7).png" width="100%" height="500px"></iframe>
                     </th>
+                    <th>
+                      <iframe id="thesismaimage" src="pdf/legend2.png" width="100%" height="500px"></iframe>
+                    </th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
                     <td><li><a href="pdf/fullfullfinal.pdf">Link to Enlarged Graph</a></li></td>
                     <td><li><a href="pdf/morethan1final.pdf">Link to Enlarged Graph</a></li></td>
-                    
+                    <td><li><a href="pdf/legend2.png">Link to Enlarged Graph</a></li></td>
                   </tr>
                   
                 </tbody>
