--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
             </div>
             <div class="row">
                 <div class="col-md h1">
-                    <iframe src="pdf/Final long essay-5.pdf" width="50%" height="700px">
+                    <iframe src="pdf/JoseHernandezMADIGSthesis.pdf" width="50%" height="700px">
                     </iframe>
 
                     
