--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                 The Importance and Evolution of Mobility on the Battlefield
             </p>
           <p id="description" class="container-fluid"> 
-            This project analyzes the citations and conclusions of a group of russian and Americna military works that adress the Mongol military legacy in their respective armies. here you can find the thesis with the written analysisn fo the conclusions and the resultingg citation networks.
+            This project analyzes the citations and conclusions of a corpus of Russian and Americna military works that study the Mongol military legacy in their respective armies. In this page you can find the thesis with the written analysis and the resulting citation networks produced for the Digital Studies element of the thesis.
             </p>
           </div>
       <div>
