--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
     <div id="full" class="container-fluid">
         <div id= "intro" class="container-fluid">
             <p id="guide" class="container-fluid">
-                The Importance and Evolution of Mobility on the Battlefield
+              Comparing Russian and American Military Studies on the Lessons of Mongol Military Art Utilizing Network Analysis and Close Readings
             </p>
           <p id="description" class="container-fluid"> 
             This project analyzes the citations and conclusions of a corpus of Russian and Americna military works that study the Mongol military legacy in their respective armies. In this page you can find the thesis with the written analysis and the resulting citation networks produced for the Digital Studies element of the thesis.
