--- a/about.html
+++ b/about.html
@@ -38,6 +38,9 @@
               <li class ="nav-item">
                   <a class="nav-link" href="api.html">API</a> 
                </li>
+               <li class ="nav-item">
+                <a class="nav-link" href="datavis.html">Data Visualization</a> 
+             </li>
            
           </ul>
         </div>
